<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="UselessParent">
                <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/cbs_image"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/password"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_marginTop="5dp"
                    tools:ignore="Autofill,LabelFor" />



                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/remember_my_username"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:buttonTint="#092a71"
                    android:layout_marginTop="20dp"
                    />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="#011842"
                    android:text="@string/continue_to_login"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="9dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="UselessLeaf">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:text="@string/by_using_this_app_you_agree_to_cbs_s_terms_of_use_and_privacy_policy"/>

            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>
</layout>